--- a/style/index-style.css
+++ b/style/index-style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-image: url(../images/FondoNegro.png);
+    background: linear-gradient(145deg, #000000, #1b1b1b);
     display: flex;
     justify-content: center;
     align-items: center;
